<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@drawable/bg_card" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">
                <TextView
                    android:id="@+id/test"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="casual"
                    android:text="@string/Do"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/test_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textSize="12sp"
                    android:text="@string/service_start" />


                <TextView
                    android:id="@+id/test_pause"
                    android:textSize="12sp"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"

                    android:text="@string/service_bind" />

                <TextView
                    android:id="@+id/test_cancel"
                    android:textSize="12sp"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/service_unbind" />

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>